tests/ui/impl-trait/hidden-type-is-opaque-2.next.stderr
error[E0599]: no method named `reify_as` found for type `_` in the current scope
  --> $DIR/hidden-type-is-opaque-2.rs:11:14
   |
LL |         cont.reify_as();
   |              ^^^^^^^^ method not found in `_`

error[E0599]: no method named `reify_as` found for type `_` in the current scope
  --> $DIR/hidden-type-is-opaque-2.rs:21:14
   |
LL |         cont.reify_as();
   |              ^^^^^^^^ method not found in `_`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0599`.
